# ai-agent-masterclass

./: .gitignore  README.md
260407-my-first-agent/: assignment_01.ipynb  assignment_02.ipynb  assignment_03.ipynb  main.ipynb  pyproject.toml
260413-chatgpt-clone/: README.md  agent.py  app.py  main.py  pyproject.toml  rag_service.py  sqlite_session.py
260421-restaurant-bot/: README.md  main.py  models.py  pyproject.toml  utils.py
260421-restaurant-bot/restaurant_agents/: complaints.py  menu.py  order.py  reservation.py  triage.py
260430-fairy-story-agent/: agent.py  main.py  pyproject.toml
260430-fairy-story-agent/story_agent/: agent.py
