[project]
name = "chatgpt-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "openai-agents[viz]>=0.2.6",
    "python-dotenv>=1.1.1",
    "duckduckgo-search>=6.0.0",
    "streamlit>=1.48.0",
    "chromadb>=0.6.0",
    "ollama>=0.1.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]